syntax = "proto3";
package io.axoniq.eventstore;

option java_multiple_files = true;

message EventWithToken {
    int64 token = 1;
    Event event = 2;
}


message Event {
    /* A message id */
    string message_identifier = 1;

    string aggregate_identifier = 2;
    int64 aggregate_sequence_number = 3;
    string aggregate_type = 4;

    int64 timestamp = 5;

    Payload payload = 6;
    map<string, MetaDataValue> meta_data = 7;
}

message Payload {

    string type = 1;
    string revision = 2;
    bytes data = 3;
}

message MetaDataValue {
    oneof data {
        string text_value = 1;
        sint64 number_value = 2;
        bool boolean_value = 3;
        double double_value = 4;
        bytes bytes_value = 5;
    }

}

